update pdfsam to 5.2.2 - build issues
# Das ist Commit-Beschreibung #2: